--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Download</title>
+  <title>さたえっくす</title>
   <style>
     /* グローバルスタイル */
     * {
@@ -93,23 +93,22 @@
   <!-- メインコンテンツ -->
   <div id="main-content">
     <header id="banner" class="banner">
-      <img src="GZLTMCLawAEd3eO.jpg" alt="ホームページのバナー" class="banner-image">
+      <img src="GZLTMCLawAEd3eO.jpg" alt="バナー" class="banner-image">
     </header>
 
     <nav class="nav-bar">
       <ul>
-        <li><a href="GZLTMCLawAEd3eO.jpg">Home</a></li>
-        <li><a href="GZLTMCLawAEd3eO.jpg">Music</a></li>
-        <li><a href="GZLTMCLawAEd3eO.jpg">News</a></li>
-        <li><a href="GZLTMCLawAEd3eO.jpg">Store</a></li>
-        <li><a href="GZLTMCLawAEd3eO.jpg">開発</a></li>
-        <li><a href="GZLTMCLawAEd3eO.jpg">Download</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Music</a></li>
+        <li><a href="#">つぶやき</a></li>
+        <li><a href="#">開発</a></li>
+        <li><a href="#">Download</a></li>
       </ul>
     </nav>
 
     <section id="home" class="content">
-      <h2>Downloadのページ</h2>
-      <p>ここはDownloadのコンテンツが入る</p>
+      <h2>さたえっくすの魔境</h2>
+      <p>こんにちは！</p>
     </section>
   </div>
 
