--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <!-- メインコンテンツ -->
   <div id="main-content">
     <header id="banner" class="banner">
-      <img src="GZLTMCLawAEd3eO.jpg" alt="バナー" class="banner-image">
+      <img src="bana.jpg" alt="バナー" class="banner-image">
     </header>
 
     <nav class="nav-bar">
