--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
       <p>こんにちは！</p>
     </section>
   </div>
+        <footer>
+        <p>このページはスマートフォンなどで上手く表示されない場合があります。</p>
+    </footer>
+      <footer>
+        <p>Copyright © 2023-2024 さたえっくす</p>
+    </footer>
 
   <script>
     // ページ読み込み時にコンテンツを表示する
