--- a/index.html
+++ b/index.html
@@ -1,134 +1,1 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>さたえっくす</title>
-  <style>
-    /* グローバルスタイル */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Arial', sans-serif;
-      color: #fff;
-    }
-
-    body {
-      background: linear-gradient(135deg, #1a1a2e, #16213e);
-      height: 100vh;
-      overflow: hidden;
-      scroll-behavior: smooth;
-    }
-
-    /* メインコンテンツ */
-    #main-content {
-      opacity: 0;
-      transition: opacity 1.5s ease-in-out;
-      display: none; /* 初期状態は非表示 */
-    }
-
-    /* バナー */
-    .banner {
-      width: 100%;
-      height: 300px; /* バナーの高さ */
-      display: flex;
-      align-items: center; /* 縦中央揃え */
-      justify-content: center; /* 横中央揃え */
-      overflow: hidden; /* オーバーフローを隠す */
-    }
-
-    .banner-image {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain; /* アスペクト比を保ちながら収める */
-      transition: opacity 0.5s ease;
-    }
-
-    /* ナビゲーションバー */
-    .nav-bar {
-      background-color: #16213e;
-      padding: 15px 0;
-    }
-
-    .nav-bar ul {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      list-style: none;
-    }
-
-    .nav-bar a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.2rem;
-      transition: color 0.3s;
-    }
-
-    .nav-bar a:hover {
-      color: #e94560;
-    }
-
-    /* 各セクションのスタイル */
-    .content {
-      padding: 50px 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    /* アニメーション */
-    @keyframes slideDown {
-      from {
-        transform: translateY(-100%);
-      }
-      to {
-        transform: translateY(0);
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- メインコンテンツ -->
-  <div id="main-content">
-    <header id="banner" class="banner">
-      <img src="bana.jpg" alt="バナー" class="banner-image">
-    </header>
-
-    <nav class="nav-bar">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">つぶやき</a></li>
-        <li><a href="#">開発</a></li>
-        <li><a href="#">Download</a></li>
-      </ul>
-    </nav>
-
-    <section id="home" class="content">
-      <h2>さたえっくすの魔境</h2>
-      <p>こんにちは！</p>
-    </section>
-  </div>
-        <footer>
-        <p>このページはスマートフォンなどで上手く表示されない場合があります。</p>
-    </footer>
-      <footer>
-        <p>Copyright © 2023-2024 さたえっくす</p>
-    </footer>
-
-  <script>
-    // ページ読み込み時にコンテンツを表示する
-    window.onload = function() {
-      const mainContent = document.getElementById('main-content');
-      mainContent.style.display = 'block'; // コンテンツを表示
-      setTimeout(() => {
-        mainContent.style.opacity = '1'; // フェードイン
-      }, 10);
-    };
-  </script>
-
-</body>
-</html>
-
+現在、このページは表示できません
