--- a/sataxmaky/素材/index.html
+++ b/sataxmaky/素材/index.html
@@ -95,7 +95,7 @@
   <!-- メインコンテンツ -->
   <div id="main-content">
     <header id="banner" class="banner">
-      <img src="sataxmaky/data/img/素材_bana.jpg" alt="バナー" class="banner-image">
+      <img src="https://sata-x.github.io/sataxmaky/data/img/%E7%B4%A0%E6%9D%90_bana.jpg" alt="バナー" class="banner-image">
     </header>
 
     <nav class="nav-bar">
